--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "next": "15.1.0",
     "prettier": "^3.4.2",
     "react": "^19.0.0",
-    "react-dom": "^19.0.0"
+    "react-dom": "^19.0.0",
+    "vercel": "^39.2.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
